--- a/F22/Advanced-Interface-using-CSS-COMP2081/week1/boilerplate/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/week1/boilerplate/index.html
@@ -91,7 +91,7 @@
         <section id="section4">
             <h2>See Also</h2>
             <ul>
-                <li>Library (computer science)</li>
+                <li class="hidden">Library (computer science)</li>
                 <li>Template processors are used to generate boilerplate text automatically</li>
                 <li>Transpromotional</li>
             </ul>
