--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
@@ -9,10 +9,11 @@
     <title>Comp2081-Assignment 1-Kyle Duffy</title>
     <link rel="stylesheet" href="./stylesheets/normalize.css">
     <link rel="stylesheet" href="./stylesheets/index.css">
+    <script src="./scripts/scripts.js" defer></script>
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <section id="logoSection">
             <a href="#"><img src="./imgs/logo.png" alt="Company Logo" longdesc="https://logopond.com/AntonioZacarias/showcase/detail/309637"></a>
         </section>
@@ -29,8 +30,24 @@
             </nav>
         </section>
     </header>
-    <main></main>
-    <footer>
+    <main>
+        <section id="mainBanner"></section>
+        <section id="leftBanner"></section>
+        <section id="rightBanner"></section>
+        <section id="mainContent1"></section>
+        <section id="secondaryContent1"></section>
+        <section id="tertiaryContent1"></section>
+        <section id="middleSection"></section>
+        <section id="rightAd1"></section>
+        <section id="rightAd2"></section>
+        <section id="rightAd3"></section>
+        <section id="mainContent2"></section>
+        <section id="secondaryContent2"></section>
+        <section id="tertiaryContent2"></section>
+        <section id="coulmn1"></section>
+        <section id="coulmn2"></section>
+    </main>
+    <footer id="footer">
 
     </footer>
 </body>
