--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
@@ -10,30 +10,49 @@
     <link rel="stylesheet" href="./stylesheets/normalize.css">
     <!-- css section-->
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./stylesheets/index.css">
     <script src="./scripts/scripts.js" defer></script>
+
 </head>
 
 <body>
+
     <header id="header">
         <section id="logoSection">
             <a href="#"><img src="./imgs/logo.png" alt="Company Logo" longdesc="https://logopond.com/AntonioZacarias/showcase/detail/309637"></a>
         </section>
         <section>
-            <h1> Main Header</h1>
+
         </section>
         <section>
             <nav id="nav">
-                <a href="#">sample Text</a>
-                <a href="#">sample Text</a>
-                <a href="#">sample Text</a>
-                <a href="#">sample Text</a>
-                <a href="#">sample Text</a>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Contact</a>
+                <a href="#">Login</a>
             </nav>
         </section>
+        <section>
+
+            <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </section>
+
     </header>
+    <nav id="topnav">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Products</a>
+        <a href="#">Contact</a>
+        <a href="#">Login</a>
+    </nav>
     <main>
-        <section class="contentSection" id="mainBanner">Some sort of banner</section>
+        <section class="contentSection" id="mainBanner">
+            <a href="#"><img src="./imgs/mainBanner.jpg"></a>
+        </section>
         <section class="contentSection" id="leftBanner"></section>
         <section class="contentSection" id="rightBanner"></section>
         <section class="contentSection" id="mainContent1">
