--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
@@ -59,7 +59,7 @@
             <h1>Title1</h1>
             <article>
                 <h2>sub-Title</h2>
-                <img>
+                <img src="./imgs/logo.jpg">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed laoreet bibendum magna, ut tristique risus vestibulum in. Morbi eget magna dui. Cras metus mi, venenatis vitae ultricies sed, fringilla ac tortor. Donec venenatis condimentum
                     odio, ac tristique velit egestas quis. Phasellus risus nulla, feugiat in accumsan a, viverra malesuada purus. Nulla semper id arcu eget tristique. Suspendisse eu diam magna. Ut quis diam ac turpis posuere interdum sed sed felis. Nulla
                     molestie mollis elit, at scelerisque elit porta eget. Phasellus dictum laoreet turpis, vitae imperdiet erat commodo eu. Nullam metus enim, dignissim non eros non, cursus ultrices urna. Nulla feugiat metus elit, dapibus ultricies odio
