--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
@@ -69,9 +69,9 @@
         <section class="contentSection" id="secondaryContent1"></section>
         <section class="contentSection" id="tertiaryContent1"></section>
         <section class="contentSection" id="middleSection"></section>
-        <section class="contentSection" id="rightAd1"></section>
-        <section class="contentSection" id="rightAd2"></section>
-        <section class="contentSection" id="rightAd3"></section>
+        <section class="contentSection" id="rightAd1"><img src="./imgs/yourAdHere.PNG"></section>
+        <section class="contentSection" id="rightAd2"><img src="./imgs/yourAdHere.PNG"></section>
+        <section class="contentSection" id="rightAd3"><img src="./imgs/yourAdHere.PNG"></section>
         <section class="contentSection" id="mainContent2"></section>
         <section class="contentSection" id="secondaryContent2"></section>
         <section class="contentSection" id="tertiaryContent2"></section>
