hamburger changes/font
added main and content font. also styled the hamburger menu to match

--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
@@ -11,6 +11,9 @@
     <!-- css section-->
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkalami&family=Voces&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheets/index.css">
     <script src="./scripts/scripts.js" defer></script>
 
