added a bit of conent
-added filler content
-fixed header scroll issue

--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/index.html
@@ -57,7 +57,33 @@
             <a href="#"><img src="./imgs/mainBanner.jpg"></a>
         </section>
         <section class="contentSection" id="leftBanner"></section>
-        <section class="contentSection" id="rightBanner"></section>
+        <section class="contentSection" id="rightBanner">
+            <h1>Cart</h1>
+            <section>
+                <article>
+                    <div>
+                        <h2>Item Name</h2>
+                        <img src="./imgs/sampleImage.png" alt="Item X Description">
+                    </div>
+                    <p>$19.99</p>
+                </article>
+                <article>
+                    <div>
+                        <h2>Item Name</h2>
+                        <img src="./imgs/sampleImage.png" alt="Item X Description">
+                    </div>
+                    <p>$19.99</p>
+                </article>
+                <article>
+                    <div>
+                        <h2>Item Name</h2>
+                        <img src="./imgs/sampleImage.png" alt="Item X Description">
+                    </div>
+                    <p>$19.99</p>
+                </article>
+
+            </section>
+        </section>
         <section class="contentSection" id="mainContent1">
             <h1>Title1</h1>
             <article>
@@ -71,7 +97,53 @@
         </section>
         <section class="contentSection" id="secondaryContent1"></section>
         <section class="contentSection" id="tertiaryContent1"></section>
-        <section class="contentSection" id="middleSection"></section>
+        <section class="contentSection" id="middleSection">
+            <h1>Reviews</h1>
+            <section>
+
+
+                <article>
+                    <h1>Reviewer's Title</h1>
+                    <div> <label for="review1Name">Name:</label>
+                        <h2 id="review1Name">Reviewer's name</h2>
+                    </div>
+                    <div>
+                        <label for="review1Date">Date:</label>
+                        <h2 id="review1Date">2022-10-10</h2>
+                    </div>
+                    <p>vitae ultricies sed, fringilla ac tortor. Donec venenatis condimentum odio, ac tristique velit egestas quis. Phasellus risus nulla, feugiat in accumsan a, viverra malesuada purus. Nulla semper id arcu eget tristique. Suspendisse eu
+                        diam magna.
+                    </p>
+
+                </article>
+                <article>
+                    <h1>Reviewer's Title</h1>
+                    <div> <label for="review1Name">Name:</label>
+                        <h2 id="review1Name">Reviewer's name</h2>
+                    </div>
+                    <div>
+                        <label for="review1Date">Date:</label>
+                        <h2 id="review1Date">2022-10-10</h2>
+                    </div>
+                    <p>vitae ultricies sed, fringilla ac tortor. Donec venenatis condimentum odio, ac tristique velit egestas quis. Phasellus risus nulla, feugiat in accumsan a, viverra malesuada purus. Nulla semper id arcu eget tristique. Suspendisse eu
+                        diam magna.
+                    </p>
+                </article>
+                <article>
+                    <h1>Reviewer's Title</h1>
+                    <div> <label for="review1Name">Name:</label>
+                        <h2 id="review1Name">Reviewer's name</h2>
+                    </div>
+                    <div>
+                        <label for="review1Date">Date:</label>
+                        <h2 id="review1Date">2022-10-10</h2>
+                    </div>
+                    <p>vitae ultricies sed, fringilla ac tortor. Donec venenatis condimentum odio, ac tristique velit egestas quis. Phasellus risus nulla, feugiat in accumsan a, viverra malesuada purus. Nulla semper id arcu eget tristique. Suspendisse eu
+                        diam magna.
+                    </p>
+                </article>
+            </section>
+        </section>
         <section class="contentSection" id="rightAd1"><img src="./imgs/yourAdHere.PNG"></section>
         <section class="contentSection" id="rightAd2"><img src="./imgs/yourAdHere.PNG"></section>
         <section class="contentSection" id="rightAd3"><img src="./imgs/yourAdHere.PNG"></section>
