--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week6/lab6/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week6/lab6/index.html
@@ -22,8 +22,8 @@
                 <a class="navbar-brand ms-2" href="#">
                     <img src="img/georgian-college-logo-reverse.svg" class="d-inline-block align-top" width="75" height="50" alt="bootstrap logo">
                 </a>
-                <button class="navbar-toggler me-2" data-bs-toggle="collapse" data-bs-target="#globalNav" type="button">
-					<span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#globalNav" type="button">
+					<span class="  pe-5 navbar-toggler-icon"></span>
 				</button>
                 <div class="collapse navbar-collapse" id="globalNav">
                     <ul class="navbar-nav me-auto ms-2">
