--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -31,22 +31,7 @@
 
 <body>
 
-    <!-- 
-            <ul class="navbar-nav ms-auto me-3">
-                <li class="nav-item active me-5">
-                    <a class="nav-link" href="#">What's Inside</a>
-                </li>
-                <li class="nav-item active me-5">
-                    <a class="nav-link" href="#">Author</a>
-                </li>
-                <li class="nav-item active me-5">
-                    <a class="nav-link" href="#">Reviews</a>
-                </li>
-                <li class="nav-item active me-5">
-                    <a class="nav-link" href="#">Share</a>
-                </li> -->
-
-    <!-- Add your site or application content here -->
+    <span></span>
 
     <header>
 
@@ -78,29 +63,105 @@
                         <a class="nav-link" href="#">Community Info</a>
                     </li>
                 </ul>
-                <button class="me-5 btn btn-primary btn-outline-primary text-primary my-2 my-sm-0  fw-bold bg-light bg-opacity-50 buyNowButton" type="submit">Buy Now</button>
             </div>
 
         </nav>
     </header>
     <main>
-        <nav class="navbar navbar-expand-lg navbar-light .bg-transparent">
-            <ul class="navbar-nav ms-auto me-3">
-                <li class="nav-item  me-5">
+        <!-- turn into bootstrap tabs-->
+        <nav class="navbar navbar-expand-sm navbar-light .bg-transparent sticky-top">
+            <ul class="navbar-nav ms-auto me-md-5 me-sm-2 ms-sm-2 ">
+                <li class="nav-item  me-md-3 ">
+                    <a class="nav-link" href="#top">Top</a>
+                </li>
+                <li class="nav-item  me-md-3">
                     <a class="nav-link" href="#">Whats Inside</a>
                 </li>
-                <li class="nav-item  me-5">
-                    <a class="nav-link" href="#">About Author</a>
+                <li class="nav-item  me-md-3">
+                    <a class="nav-link" href="#">About the Author</a>
                 </li>
-                <li class="nav-item  me-5">
+                <li class="nav-item me-md-3 ">
                     <a class="nav-link" href="#">Excerpt</a>
                 </li>
-                <li class="nav-item  me-5">
+                <li class="nav-item me-md-3 ">
                     <a class="nav-link" href="#">Reviews</a>
                 </li>
-                </div>
+
+            </ul>
+            <button class="me-md-2 btn btn-primary btn-lg btn-outline-primary text-primary my-2 my-sm-0  fw-bold bg-light bg-opacity-50 buyNowButton" type="submit">Buy Now</button>
+
+
         </nav>
-        <section class="container">
+
+        <section id="about">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+
+                </div>
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <img src="./img/bookCover.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-lg-block">
+                            <h5>Cover</h5>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/bookBack.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-lg-block">
+                            <h5>Reverse Cover</h5>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/collectersCover.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-lg-block">
+                            <h5>Collectors Edition Cover</h5>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/collectersBack.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-lg-block">
+                            <h5>Collectors Edition Reverse Cover</h5>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+            </div>
+
+            <article>
+                <h2>Fairy Tale</h2>
+                <h4>By: <a href="https://stephenking.com">Stephen King</a></h4>
+                <h4>List Price: $32.50</h4>
+                <figure class="container">
+                    <figcaption>Synopsis</figcaption>
+                    <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes could
+                        not be higher—for their world or ours.</p>
+                </figure>
+            </article>
+
+        </section>
+        <section id="author" class="row">
+
+        </section>
+        <section id="excerpt" class="row">
+
+        </section>
+        <section id="reviews" class="row">
+
+        </section>
+        <section id="" class="row">
 
         </section>
     </main>
