fixed a few things in intro/header
re-aligned things, added a background- changed text color, modified a breakpoint

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -186,31 +186,33 @@
                     <div class="tab-pane fade" id="productDetails" role="tabpanel" aria-labelledby="productDetailsButton">...</div>
                 </div>
             </section>
+            <section class="container">
 
-            <div class="accordion" id="bottomSection">
 
-                <section id="authorInfo" class="accordion-item">
-                    <h2 class="accordion-header" id="authorInformationButton">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#authorInformation" aria-expanded="true" aria-controls="authorInformation">Author Information</button>
-                    </h2>
-                    <div id="authorInformation" class="accordion-collapse collapse show" aria-labelledby="authorInformationButton" data-bs-parent="#bottomSection">
-                        <div class="accordion-body">
+                <div class="accordion" id="bottomSection">
+
+                    <section id="authorInfo" class="accordion-item">
+                        <h2 class="accordion-header" id="authorInformationButton">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#authorInformation" aria-expanded="true" aria-controls="authorInformation">Author Information</button>
+                        </h2>
+                        <div id="authorInformation" class="accordion-collapse collapse show" aria-labelledby="authorInformationButton" data-bs-parent="#bottomSection">
+                            <div class="accordion-body">
+                            </div>
                         </div>
-                    </div>
 
-                </section>
+                    </section>
 
-                <section id="reviewsInfo" class="accordion-item">
-                    <h2 class="accordion-header" id="reviewsButton">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews">reviews</button>
-                    </h2>
-                    <div id="reviews" class="accordion-collapse collapse" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
-                        <div class="accordion-body">
+                    <section id="reviewsInfo" class="accordion-item">
+                        <h2 class="accordion-header" id="reviewsButton">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews">reviews</button>
+                        </h2>
+                        <div id="reviews" class="accordion-collapse collapse" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
+                            <div class="accordion-body">
+                            </div>
                         </div>
-                    </div>
-                </section>
-            </div>
-
+                    </section>
+                </div>
+            </section>
 
         </section>
     </main>
