--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -143,7 +143,7 @@
                         <h4>List Price: $32.50</h4>
                     </div>
                     <figure class="container">
-                        <figcaption>Synopsis</figcaption>
+                        <figcaption>About the book</figcaption>
                         <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes
                             could not be higher—for their world or ours.</p>
                         <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.</p>
@@ -157,57 +157,56 @@
                 </figure>
             </section>
             <section id="bookInfo" class="row">
-                <nav>
-                    <div class="nav nav-tabs nav-justified" id="nav-tab" role="tablist">
+                <section>
+                    <nav>
+                        <div class="nav nav-tabs nav-justified" id="nav-tab" role="tablist">
 
-                        <button class="nav-link active" id="aboutBookButton" data-bs-toggle="pill" data-bs-target="#aboutBook" type="button" role="tab" aria-controls="aboutBook" aria-selected="true">About the book</button>
+                            <button class="nav-link active" id="aboutBookButton" data-bs-toggle="pill" data-bs-target="#aboutBook" type="button" role="tab" aria-controls="aboutBook" aria-selected="true">Synopsis</button>
 
-                        <button class="nav-link" id="mediaReactionsButton" data-bs-toggle="pill" data-bs-target="#mediaReactions" type="button" role="tab" aria-controls="mediaReactions" aria-selected="false">Media Reactions</button>
+                            <button class="nav-link" id="mediaReactionsButton" data-bs-toggle="pill" data-bs-target="#mediaReactions" type="button" role="tab" aria-controls="mediaReactions" aria-selected="false">Media Reactions</button>
 
-                        <button class="nav-link" id="excerptButton" data-bs-toggle="pill" data-bs-target="#excerpt" type="button" role="tab" aria-controls="excerpt" aria-selected="false">Excerpt</button>
+                            <button class="nav-link" id="excerptButton" data-bs-toggle="pill" data-bs-target="#excerpt" type="button" role="tab" aria-controls="excerpt" aria-selected="false">Excerpt</button>
 
-                        <button class="nav-link" id="productDetailsButton" data-bs-toggle="pill" data-bs-target="#productDetails" type="button" role="tab" aria-controls="productDetails" aria-selected="false">Product Details</button>
+                            <button class="nav-link" id="productDetailsButton" data-bs-toggle="pill" data-bs-target="#productDetails" type="button" role="tab" aria-controls="productDetails" aria-selected="false">Product Details</button>
+                        </div>
+                    </nav>
+
+                    <div class="tab-content" id="v-pills-tabContent">
+
+                        <div class="tab-pane fade show active" id="aboutBook" role="tabpanel" aria-labelledby="aboutBookButton">
+                            <p>Charlie Reade looks like a regular high school kid, great at baseball and football, a decent student. But he carries a heavy load. His mom was killed in a hit-and-run accident when he was seven, and grief drove his dad to drink.
+                                Charlie learned how to take care of himself—and his dad. When Charlie is seventeen, he meets a dog named Radar and her aging master, Howard Bowditch, a recluse in a big house at the top of a big hill, with a locked shed
+                                in the backyard. Sometimes strange sounds emerge from it.</p>
+                            <p>Charlie starts doing jobs for Mr. Bowditch and loses his heart to Radar. Then, when Bowditch dies, he leaves Charlie a cassette tape telling a story no one would believe. What Bowditch knows, and has kept secret all his long
+                                life, is that inside the shed is a portal to another world.</p>
+                        </div>
+                        <div class="tab-pane fade" id="mediaReactions" role="tabpanel" aria-labelledby="mediaReactionsButton">
+
+                        </div>
+                        <div class="tab-pane fade" id="excerpt" role="tabpanel" aria-labelledby="excerptButton">...</div>
+                        <div class="tab-pane fade" id="productDetails" role="tabpanel" aria-labelledby="productDetailsButton">...</div>
                     </div>
-                </nav>
+                </section>
+                <section id="authorInfo">
+                    <p>author Info</p>
+                </section>
 
-                <div class="tab-content" id="v-pills-tabContent">
-
-                    <div class="tab-pane fade show active" id="aboutBook" role="tabpanel" aria-labelledby="aboutBookButton">
-                        <p>Charlie Reade looks like a regular high school kid, great at baseball and football, a decent student. But he carries a heavy load. His mom was killed in a hit-and-run accident when he was seven, and grief drove his dad to drink.
-                            Charlie learned how to take care of himself—and his dad. When Charlie is seventeen, he meets a dog named Radar and her aging master, Howard Bowditch, a recluse in a big house at the top of a big hill, with a locked shed in
-                            the backyard. Sometimes strange sounds emerge from it.</p>
-                        <p>Charlie starts doing jobs for Mr. Bowditch and loses his heart to Radar. Then, when Bowditch dies, he leaves Charlie a cassette tape telling a story no one would believe. What Bowditch knows, and has kept secret all his long life,
-                            is that inside the shed is a portal to another world.</p>
-                    </div>
-                    <div class="tab-pane fade" id="mediaReactions" role="tabpanel" aria-labelledby="mediaReactionsButton">
-
-                    </div>
-                    <div class="tab-pane fade" id="excerpt" role="tabpanel" aria-labelledby="excerptButton">...</div>
-                    <div class="tab-pane fade" id="productDetails" role="tabpanel" aria-labelledby="productDetailsButton">...</div>
-                </div>
             </section>
-            <section class="container">
+            <section class="">
 
 
                 <div class="accordion" id="bottomSection">
-
-                    <section id="authorInfo" class="accordion-item">
-                        <h2 class="accordion-header" id="authorInformationButton">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#authorInformation" aria-expanded="true" aria-controls="authorInformation">Author Information</button>
-                        </h2>
-                        <div id="authorInformation" class="accordion-collapse collapse show" aria-labelledby="authorInformationButton" data-bs-parent="#bottomSection">
-                            <div class="accordion-body">
-                            </div>
-                        </div>
-
-                    </section>
-
                     <section id="reviewsInfo" class="accordion-item">
                         <h2 class="accordion-header" id="reviewsButton">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews">reviews</button>
                         </h2>
                         <div id="reviews" class="accordion-collapse collapse" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
                             <div class="accordion-body">
+                                <div id="output">
+                                    <div class="accordion container" id="innerAcordion">
+
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
@@ -218,12 +217,12 @@
     </main>
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- Bootstrap JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-
+    <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
